--- a/stylecdn.css
+++ b/stylecdn.css
@@ -28,7 +28,7 @@ body{
 
       font-family: f1;
 
-      src: url(nd.ttf);
+      src: url(https://ashuhar455.github.io/gaterepo/nd.ttf);
 
     }
 
