--- a/stylecdn.css
+++ b/stylecdn.css
@@ -28,7 +28,7 @@ body{
 
       font-family: f1;
 
-      src: url(https://ashuhar455.github.io/gaterepo/nd.ttf);
+      src: url(https://ashuhar455.github.io/nd.ttf);
 
     }
 
@@ -83,6 +83,7 @@ body{
       margin : 0px 0px;
 
 }
+
 
 #foot {
 
